Update MyFirst.java